[Scrollbars][Loveship][Promo]: updated styles according design [ScrollManager]: fixed the correctness of work when resizing a window and changing the client width of elements nested in scrollbars

--- a/loveship/components/layout/ScrollBars.scss
+++ b/loveship/components/layout/ScrollBars.scss
@@ -1,7 +1,15 @@
+@use '../../assets/styles/scss/loveship-colors' as *;
+
 .root {
     :global(.uui-thumb) {
-        border-radius: 3px;
+        width: 3px;
         height: inherit;
+        border-radius: 1.5px;
+
+        &:hover {
+            width: 6px;
+            border-radius: 3px;
+        }
     }
 }
 
@@ -15,7 +23,13 @@
     }
 
     :global(.uui-thumb) {
-        background: rgba(0, 0, 0, 0.2);
+        background: $night400;
+
+        &:active {
+            width: 6px;
+            border-radius: 3px;
+            background: $night600;
+        }
     }
 }
 
@@ -29,6 +43,12 @@
     }
 
     :global(.uui-thumb) {
-        background: rgba(0, 0, 0, 0.2);
+        background: $night400;
+
+        &:active {
+            width: 6px;
+            border-radius: 3px;
+            background: $night600;
+        }
     }
 }
